# AdventOfCode

./: .gitignore  .pre-commit-config.yaml  README.md  main.py
01/C/: main.cpp
01/Python/: main.py
02/Python/: main.py
03/Python/: main.py
06/Python/: main.py
10/Python/: main.py
11/Python/: main.py
12/Python/: functools_caching.py
18/Python/: main.py  old.py
2021/: CMakeLists.txt  main.cpp
2021/01/: main.cpp
2021/01/C++/: main.cpp
2021/02/: main.cpp
2021/02/C++/: main.cpp
2021/03/: main.cpp
2021/03/C++/: main.cpp
2021/04/: main.cpp
2021/04/C++/: main.cpp
2021/05/: main.cpp
2021/05/C++/: main.cpp
2021/06/: main.cpp
2021/07/: main.cpp
2021/08/: main.cpp
2021/09/: main.cpp
2021/10/: main.cpp
2021/11/: main.cpp
2021/12/: main.cpp
2021/13/: example  main.cpp
2021/14/: main.cpp
2021/15/: main.cpp
2021/16/: main.cpp
2021/17/: main.cpp
2021/18/: main.cpp
2021/Utils/: Vector.cpp  Vector.h  types.h  utils.cpp  utils.h
2021/Utils/C++/: Vector.cpp  Vector.h  utils.cpp  utils.h
2022/02/: main.py
2023/: README.md
2024/: 2024.csproj  2024.sln  Program.cs
2024/01/: Day01.cs  example
2024/02/: Day02.cs  example
2024/03/: Day03.cs
2024/04/: Day04.cs  example
2024/05/: Day05.cs  example
2024/06/: Day06.cs  example
2024/07/: Day07.cs  example
2024/08/: Day08.cs  example
2024/09/: Day09.cs
2024/10/: Day10.cs  Day10_refactored.cs  example
2024/11/: Day11.cs
2024/12/: Day12.cs  example
2024/13/: Day13.cs  example
2024/14/: Day14.cs  example
2024/15/: Day15.cs  (+1 more)
2025/: Program.cs  create_day.sh
(+95 files in other folders)
